Adding a detailed View for DAAS Sessions and retry for Daas Webjob state (#110)
* Adding a detailed View for DAAS Sessions and retry for Daas Webjob state
* Adding Refresh Button for various components
* Added Refresh button when DAAS errors out
* Fixing tools to work on PremiumV2 plans
* Moving the logic to create SiteDaasInfo in SiteService itself
* creating a datetimediff pipe
* Making the DAAS Component Auto-updatable and removing Refresh

--- a/src/app/solutions/components/specific-solutions/java-threaddump-solution/java-threaddump-solution.component.html
+++ b/src/app/solutions/components/specific-solutions/java-threaddump-solution/java-threaddump-solution.component.html
@@ -1,6 +1,6 @@
 <default-solution-template [title]="title" [description]="description" [tags]="data.tags">
     
-    <daas [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed" [DiagnoserName]="DiagnoserName" (SessionsEvent)="updateSessions($event)">
+    <daas [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed" [diagnoserName]="diagnoserName" (SessionsEvent)="updateSessions($event)">
     </daas>
 
     <div class="header2">What you should know before collecting a Java Thread Dump</div>
@@ -8,6 +8,6 @@
         <li *ngFor="let statement of thingsToKnowBefore">{{statement}}</li>
     </ul>
 
-    <daas-sessions [refreshSessions]="refreshSessions" DiagnoserNameLookup="JAVA Thread Dump" [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed"></daas-sessions>
+    <daas-sessions [showDetailsLink]="false" [refreshSessions]="refreshSessions" diagnoserNameLookup="JAVA Thread Dump" [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed"></daas-sessions>
 
 </default-solution-template>
