--- a/src/app/solutions/components/specific-solutions/profiling-solution/profiling-solution.component.html
+++ b/src/app/solutions/components/specific-solutions/profiling-solution/profiling-solution.component.html
@@ -8,6 +8,6 @@
         <li *ngFor="let statement of thingsToKnowBefore">{{statement}}</li>
     </ul>
 
-    <daas-sessions [refreshSessions]="refreshSessions" DiagnoserNameLookup="CLR Profiler" [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed"></daas-sessions>
+    <daas-sessions [showDetailsLink]="false" [refreshSessions]="refreshSessions" diagnoserNameLookup="CLR Profiler" [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed"></daas-sessions>
 
 </default-solution-template>
