--- a/src/app/availability/analysis/perf-analysis.component.html
+++ b/src/app/availability/analysis/perf-analysis.component.html
@@ -16,8 +16,9 @@
                     <i class="fa fa-circle-o-notch fa-2x fa-spin spin-icon" aria-hidden="true"></i>
                     <span [@loadingAnimation]="showLoadingMessage ? 'shown' : 'hidden'" class="loading-message">{{loadingMessages[loadingMessageIndex]}}</span>
                 </div>
-                <problem-solution *ngIf="analysisResponse && runtimeAvailabilityResponse" [showAppInsights]="false" [defaultSolutions]="defaultSolutions" [problemDescription]='problemDescription'
-                    [analysisResponseInput]="analysisResponse" [selectedTimePeriodIndexInput]="selectedTimePeriodIndex" [openedFromTicketOpeningFlow]="bladeOpenedFromSupportTicketFlow">
+                <problem-solution *ngIf="analysisResponse && runtimeAvailabilityResponse" [showAppInsights]="true" [defaultSolutions]="defaultSolutions" [problemDescription]='problemDescription'
+                    [analysisResponseInput]="analysisResponse" [selectedTimePeriodIndexInput]="selectedTimePeriodIndex" [openedFromTicketOpeningFlow]="bladeOpenedFromSupportTicketFlow"
+                    [parentContainer]="'perfanalysis'">
                 </problem-solution>
             </div>
         </div>
