--- a/src/app/availability/app-insights/dependencies/app-insights-dependencies.component.html
+++ b/src/app/availability/app-insights/dependencies/app-insights-dependencies.component.html
@@ -1,1 +1,38 @@
-<!-- TODO -->
+<div style="text-align: center; padding:20px" *ngIf="loading">
+    <i class="fa fa-circle-o-notch fa-2x fa-spin spin-icon" aria-hidden="true"></i>
+</div>
+
+<div *ngIf="!loading && dependencies.length > 0">
+    <table class="table table-hover table-responsive no-border">
+        <thead>
+            <tr>
+                <th>Endpoint</th>
+                <th>Type</th>
+                <th>Duration(ms)</th>
+                <th>Total Requests</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of dependencies" style="font-size:13px">
+                <td>{{item.endpoint}}</td>
+                <td>{{item.type}}</td>
+                <td>{{item.duration_50}}</td>
+                <td>{{item.requests}}</td>
+            </tr>
+        </tbody>
+
+    </table>
+    <div style="width:100%;text-align:right;font-size:13px;padding:3px">
+        <a (click)="OpenAppInsights()">
+            View More in App Insights
+            <i class="fa fa-arrow-circle-o-right" style="font-size: 15px"></i>
+        </a>
+    </div>
+</div>
+
+
+
+
+<div *ngIf="!loading && dependencies.length === 0" style="font-size:16px;padding:10px">
+    No slow dependencies found during this time.
+</div>
