function app fixes

--- a/src/app/supportbot/homepage/homepage.component.html
+++ b/src/app/supportbot/homepage/homepage.component.html
@@ -5,7 +5,7 @@
     <div id="tools-content" [style.height.px] = "toolsContainerHeight">
 
         <app-insights-tile></app-insights-tile>
-        <support-tools></support-tools>
+        <support-tools *ngIf="showSupportTools"></support-tools>
 
         <collapsible-list *ngFor="let list of listCollection" [title]="list.title" [collapsed]="list.collapsed">
             <collapsible-list-item *ngFor="let item of list.items" (onSelect)="openUrl(item.href, item.title, list.title)" [marginTop]="10"><a>{{item.title}}</a></collapsible-list-item>
