--- a/src/app/availability/analysis/availability-graph.component.html
+++ b/src/app/availability/analysis/availability-graph.component.html
@@ -1,37 +1,42 @@
-<div class="row" style="margin-bottom: 5px;margin-left:0;margin-top:10px">
-    <span style="font-size: 14px">Last 24 Hours:</span>
-    <div class="btn-group" role="group" aria-label="...">
-        <button *ngIf="showPerformanceFirst" type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':dataOption === 2 && displayGraph}"
-            (click)="selectGraphButton(2);" [disabled]="!latencyGraphData">
-            Performance
-        </button>
-        <button type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':dataOption === 0 && displayGraph}" (click)="selectGraphButton(0);"
-            [disabled]="!availabilityGraphData">
-            Availability
-        </button>
-        <button type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':dataOption === 1 && displayGraph}" (click)="selectGraphButton(1);"
-            [disabled]="!requestsGraphData">
-            Requests
-        </button>
-        <button *ngIf="!showPerformanceFirst" type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':dataOption === 2 && displayGraph}"
-            (click)="selectGraphButton(2);" [disabled]="!latencyGraphData">
-            Performance
-        </button>
-        <button type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':!displayGraph}" (click)="displayGraph = !displayGraph; this.displayGraphChange.emit(displayGraph);">
-            Hide
-        </button>
-    </div>
-</div>
-
-<div class="panel panel-default" *ngIf="displayGraph">
+<div class="panel panel-default" style="position: relative; min-height: 35px;">
     <div class="panel-body" style="padding-bottom: 0px;">
-        <div *ngIf="displayGraph" class="row" style="padding-right: 10px; height: 200px;padding-bottom: 0px;">
+        <div class="hide-button">
+            <button type="button" class="btn btn-link" (click)="displayGraph = !displayGraph">
+                <span *ngIf="displayGraph">Hide Graph<a style="padding-left:10px" class="fa fa-chevron-up"></a></span>
+                <span *ngIf="!displayGraph">Show Graph<a style="padding-left:10px"  class="fa fa-chevron-down"></a></span>
+            </button>
+        </div>
+        <div class="button-control" *ngIf="displayGraph">
+            <div class="btn-group" role="group" aria-label="...">
+                <button *ngIf="showPerformanceFirst" type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':dataOption === 2 && displayGraph}"
+                    (click)="selectGraphButton(2);" [disabled]="!latencyGraphData">
+                    Performance
+                </button>
+                <button type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':dataOption === 0 && displayGraph}" (click)="selectGraphButton(0);"
+                    [disabled]="!availabilityGraphData">
+                    Availability
+                </button>
+                <button type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':dataOption === 1 && displayGraph}" (click)="selectGraphButton(1);"
+                    [disabled]="!requestsGraphData">
+                    Requests
+                </button>
+                <button *ngIf="!showPerformanceFirst" type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':dataOption === 2 && displayGraph}"
+                    (click)="selectGraphButton(2);" [disabled]="!latencyGraphData">
+                    Performance
+                </button>
+                <button type="button" class="btn btn-default btn-xs" [ngClass]="{'btn-primary':dataOption === 3 && displayGraph}" (click)="selectGraphButton(3);"
+                    [disabled]="!latencyGraphData">
+                    Show All
+                </button>
+            </div>
+        </div>
+        <div *ngIf="displayGraph" class="row graph-container">
             <div class="row" style="text-align: center; padding-top:85px" *ngIf="(!availabilityGraphData && (dataOption == 0 || dataOption == 1)) || (!latencyGraphData && dataOption == 2)">
                 <i class="fa fa-circle-o-notch fa-2x fa-spin spin-icon" aria-hidden="true"></i>
             </div>
-            <app-nvD3-chart [options]="availabilityGraphOptions" [data]="availabilityGraphData" *ngIf="availabilityGraphData && dataOption === 0"></app-nvD3-chart>
-            <app-nvD3-chart [options]="requestsGraphOptions" [data]="requestsGraphData" *ngIf="requestsGraphData && dataOption === 1"></app-nvD3-chart>
-            <app-nvD3-chart [options]="latencyGraphOptions" [data]="latencyGraphData" *ngIf="latencyGraphData && dataOption === 2"></app-nvD3-chart>
+            <app-nvD3-chart [options]="availabilityGraphOptions" [data]="availabilityGraphData" *ngIf="availabilityGraphData && (dataOption === 0 || dataOption === 3)"></app-nvD3-chart>
+            <app-nvD3-chart [options]="requestsGraphOptions" [data]="requestsGraphData" *ngIf="requestsGraphData && (dataOption === 1 || dataOption === 3)"></app-nvD3-chart>
+            <app-nvD3-chart [options]="latencyGraphOptions" [data]="latencyGraphData" *ngIf="latencyGraphData && (dataOption === 2 || dataOption === 3)"></app-nvD3-chart>
         </div>
 
     </div>
