--- a/src/app/availability/analysis/webapprestart/webapprestart.component.html
+++ b/src/app/availability/analysis/webapprestart/webapprestart.component.html
@@ -1,19 +1,4 @@
-<div class="row" style="border-bottom: 1px solid lightgrey;padding-top:10px;padding-bottom: 10px;margin-top:5px;margin-bottom:20px;">
-
-    <div class="col-xs-4">
-        <div class="row" style="font-variant: small-caps;color:#1a5d7d;font-size:11px">Application</div>
-        <div class="row" style="font-size:14px">{{siteName}}</div>
-    </div>
-    <div class="col-xs-8">
-        <div class="row" style="font-variant: small-caps;color:#1a5d7d;font-size:11px">Date (UTC)</div>
-        <div class="row" style="font-size:14px">
-            <form #myForm="ngForm" novalidate style="width:150px">
-                <my-date-picker name="mydate" [options]="myDatePickerOptions" [(ngModel)]="dateModel" (dateChanged)="RefreshData($event)" required></my-date-picker>
-            </form>
-        </div>
-    </div>
-
-</div>
+<detector-control></detector-control>
 
 <div *ngIf="loadingAnalysis">
     <i class="fa fa-circle-o-notch fa-2x fa-spin spin-icon" aria-hidden="true"></i>
