--- a/src/app/availability/detector-view/detector-view-main/detector-view-main.component.html
+++ b/src/app/availability/detector-view/detector-view-main/detector-view-main.component.html
@@ -1,5 +1,4 @@
-<div class="row">
-    <availability-graph [displayGraph]="displayTopLevelGraph"></availability-graph>
-</div>
+<detector-control></detector-control>
+<availability-graph [displayGraph]="displayTopLevelGraph"></availability-graph>
 
 <router-outlet></router-outlet>
