--- a/src/app/availability/detector-view/detector-view.css
+++ b/src/app/availability/detector-view/detector-view.css
@@ -1,3 +1,11 @@
 .focus-box {
     margin: 10px 0px 10px 0px;
 }
+
+.detector-loading-container {
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #cccccc;
+}
