--- a/src/app/availability/analysis/availability-graph.component.css
+++ b/src/app/availability/analysis/availability-graph.component.css
@@ -1,7 +1,3 @@
-.btn-primary{
-    background-color: #5bc0de;
-    border-color:#5bc0de;
-}
 
 .timeline-control {
     background-color: #f9f9f9;
@@ -11,4 +7,24 @@
 
 .panel {
     margin-bottom: 10px;
+}
+
+.button-control {
+    position: relative;
+    left:0;
+    top:0;
+    display: table;
+}
+
+.graph-container {
+    min-height: 200px;
+    padding-bottom: 0px;
+}
+
+.hide-button {
+    position: absolute;
+    width: 100%;
+    right: 0px;
+    text-align: center;
+    top: 0px;
 }
