--- a/src/app/availability/analysis/tcpconnectionsanalysis/tcp-connections-analysis.component.html
+++ b/src/app/availability/analysis/tcpconnectionsanalysis/tcp-connections-analysis.component.html
@@ -1,4 +1,4 @@
-<div class="row" style="border-bottom: 1px solid lightgrey;padding-top:10px;padding-bottom: 10px;margin-top:5px;margin-bottom:20px;">
+<!-- <div class="row" style="border-bottom: 1px solid lightgrey;padding-top:10px;padding-bottom: 10px;margin-top:5px;margin-bottom:20px;">
 
     <div class="col-xs-4">
         <div class="row" style="font-variant: small-caps;color:#1a5d7d;font-size:11px">Application</div>
@@ -14,7 +14,8 @@
         </div>
     </div>
 
-</div>
+</div> -->
+<detector-control></detector-control>
 
 <div>
     <h4>TCP Connections Summary</h4>
