--- a/AngularApp/src/styles/global.css
+++ b/AngularApp/src/styles/global.css
@@ -677,6 +677,6 @@ ngu-tile > .tile {
     box-shadow: none !important;
 }
 
-.comm-action-button:hover{
-    text-decoration: :none;
+.comm-action-button:hover {
+    text-decoration: none;
 }
