--- a/src/app/shared/components/notification/notification.component.html
+++ b/src/app/shared/components/notification/notification.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="notificationService.activeNotification">
-    <div class="notification" (click)="notificationService.currentNotificationAction()">
+    <div class="notification" [class.notification-noaction]="!notificationService.activeNotification.action" (click)="notificationService.currentNotificationAction()">
         <i class="fa" [ngClass]="notificationService.activeNotification.icon"></i> 
         {{notificationService.activeNotification.title}}
         <i class="fa fa-close pull-right" (click)="notificationService.dismiss()"></i>
