--- a/AngularApp/src/app/shared/components/generic-detector/generic-detector.component.html
+++ b/AngularApp/src/app/shared/components/generic-detector/generic-detector.component.html
@@ -1,4 +1,4 @@
-<div style="padding:5px 10%">
+<div class="detector-padding">
     <detector-container [detector]="detector"></detector-container>
 </div>
 
